Elevens/Activity Starter Code/Activity9  Starter Code/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code
-d
H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\doc
-encoding
windows-1252
-charset
windows-1252
H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\ThirteensGUIRunner.java
<---- end of javadoc command ---->
Loading source file H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\ThirteensGUIRunner.java...
Constructing Javadoc information...
H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\ThirteensGUIRunner.java:5: error: class ElevensGUIRunner is public, should be declared in a file named ElevensGUIRunner.java
public class ElevensGUIRunner {
       ^
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\doc\ElevensGUIRunner.html...
Generating H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\doc\package-frame.html...
Generating H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\doc\package-summary.html...
Generating H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\doc\allclasses-frame.html...
Generating H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\doc\allclasses-noframe.html...
Generating H:\GitHub\semester 2\APCS_Asem2\Elevens\Activity Starter Code\Activity9  Starter Code\doc\index.html...
1 warning
